syntax = "proto3";
package cosmos.nft.v1beta1;

import "cosmos/nft/v1beta1/nft.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/nft";

// Msg defines the nft Msg service.
service Msg {
  // Send defines a method to send a nft from one account to another account.
  rpc Send(MsgSend) returns (MsgSendResponse);
}
// MsgSend represents a message to send a nft from one account to another account.
message MsgSend {
  string class_id = 1;
  string id       = 2;
  string sender   = 3;
  string receiver = 4;
}
// MsgSendResponse defines the Msg/Send response type.
message MsgSendResponse {}